--- a/ldso/ldso/Makefile
+++ b/ldso/ldso/Makefile
@@ -1,36 +1,27 @@
 PKGDIR ?= ..
 L4DIR  ?= $(PKGDIR)/../../..
 
-CON_DIR := $(PKGDIR)/../uclibc/lib/contrib/uclibc/ldso
-PTH_DIR := $(PKGDIR)/../uclibc/lib/libpthread
-UCC_DIR := $(PKGDIR)/../uclibc/lib/uclibc
+LIBCSRC_DIR ?= $(PKGDIR)/../uclibc/lib/uclibc
+
+include $(LIBCSRC_DIR)/make_vars.mk
+
+CON_DIR := $(CONTRIB_DIR)/ldso
 
 PC_EXTRA = Link_DynLinker= rom/libld-l4.so.1
 
-DIR_amd64 := x86_64
-DIR_x86   := i386
-DIR_arm   := arm
-DIR_arm64 := aarch64
-DIR_ppc32 := powerpc
-DIR_sparc := sparc
-DIR_mips  := mips
-DIR_riscv := riscv
-
-
 vpath %.c $(CON_DIR)/ldso
-vpath %.S $(CON_DIR)/ldso/$(DIR_$(ARCH))
-vpath aeabi_read_tp-v6p.S     $(UCC_DIR)/ARCH-arm
-vpath aeabi_read_tp_generic.c $(UCC_DIR)/ARCH-arm
-vpath ssp-l4.c                $(UCC_DIR)
+vpath %.S $(CON_DIR)/ldso/$(LIBC_ARCH)
+vpath aeabi_read_tp-v6p.S     $(LIBCSRC_DIR)/ARCH-arm
+vpath aeabi_read_tp_generic.c $(LIBCSRC_DIR)/ARCH-arm
+vpath ssp-l4.c                $(LIBCSRC_DIR)
 
-PRIVATE_INCDIR-x86 := $(CON_DIR)/../libc
+PRIVATE_INCDIR-x86 := $(CONTRIB_DIR)/libc
 PRIVATE_INCDIR  = $(PRIVATE_INCDIR-$(ARCH)) \
                   $(OBJ_BASE)/include/uclibc \
-                  $(CON_DIR)/ldso/$(DIR_$(ARCH)) \
-		  $(SRC_DIR)           \
-		  $(CON_DIR)/include \
-		  $(PTH_DIR)/src \
-		  $(PTH_DIR)/src/sysdeps/$(DIR_$(ARCH))
+                  $(CON_DIR)/ldso/$(LIBC_ARCH) \
+                  $(SRC_DIR) \
+                  $(CON_DIR)/include \
+                  $(PTHREAD_INCDIR)
 
 
 TARGET := libld-l4.so
@@ -45,10 +36,10 @@ CFLAGS_string.c = -fvisibility=hidden
 CFLAGS_fixup.c = -fvisibility=hidden
 
 CPPFLAGS := -DNOT_IN_libc -DIS_IN_rtld \
-            -DLDSO_ELFINTERP=\"$(DIR_$(ARCH))/elfinterp.c\" \
+            -DLDSO_ELFINTERP=\"$(LIBC_ARCH)/elfinterp.c\" \
             -include libc-symbols.h -DUCLIBC_LDSO=\"libld-l4.so.1\" \
             -DUCLIBC_RUNTIME_PREFIX=\"/\" \
-	    -D__LDSO_SEARCH_INTERP_PATH__=1 \
+            -D__LDSO_SEARCH_INTERP_PATH__=1 \
             -DIS_IN_rtld -D__LIBDL_SHARED__ -DSHARED
 
 DEFINES_x86-l4f   += -DUSE_TLS=1
