mk: remove MKFLAGS variable
The variable is never set by anyone and also has no implicit automatic
meaning. Recursive invocations of make through $(MAKE) already inherit
the make flags of the invoking make through the MAKEFLAGS special
variable.

Also, the PKGDIR variable is overridden inside the libpthread include
Makefile and thus can be omitted and it can be explicitly set in
Makefile.install for the uclibc-headers since we need to know the
structure already anyways due to the L4DIR set there. So no point in
forcing this from the outside.

Change-Id: I53b72f58411ef87fe977a7f8c6823d81eb86f886

--- a/uclibc-headers/Makefile
+++ b/uclibc-headers/Makefile
@@ -42,13 +42,10 @@ $(HEADER_DIR): $(GENERAL_D_LOC) $(SRC_DIR)/Makefile $(HEADERS_LST) \
 	$(VERBOSE)$(RM) -r $@
 	$(VERBOSE)install -d $@
 	@$(INSTALL_LINK_MESSAGE)
-	$(VERBOSE)$(MAKE) $(MKFLAGS) $(DST_HEADERS)
+	$(VERBOSE)$(MAKE) $(DST_HEADERS)
 
 include: $(HEADER_DIR)
-	$(VERBOSE)INCSRC_DIR=$(HEADER_DIR)         \
-	  $(MAKE) $(MKFLAGS)  PKGDIR=$(PKGDIR_ABS) \
-	          -f $(SRC_DIR)/Makefile.install
-	$(VERBOSE)PKGDIR=$(LIBCSRC_DIR)/../libpthread/include \
-	  $(MAKE) $(MKFLAGS) -C $(LIBCSRC_DIR)/../libpthread/include
+	$(VERBOSE)INCSRC_DIR=$(HEADER_DIR) $(MAKE) -f $(SRC_DIR)/Makefile.install
+	$(VERBOSE)$(MAKE) -C $(LIBCSRC_DIR)/../libpthread/include
 
 clean cleanall::
