ldscripts: Make crt names configurable
Also move some of the libc specific logic out into the libc-specific
sources.mk file.

Change-Id: I58fb587978bbb803bdcb5ac80781559a472b702e

--- a/ldscripts/Makefile
+++ b/ldscripts/Makefile
@@ -27,16 +27,12 @@ LD_SCRIPTS      = main_stat.ld main_rel.ld main_dyn.ld \
 PC_FILENAME    := ldscripts
 PC_LIBS        :=
 
-# Create the wrapper binaries for programs and shared libs from uclibc
-# source files (assembly).
-# This is done here bacause l4sys.so already depends on the wrappers and must
-# not depend on the whole libc package.
-#
-# to find the uclibc files
-PRIVATE_INCDIR    = $(PKGDIR) $(CONTRIB_SYSDEPS)/$(LIBC_ARCH)
 TARGET            =
 
-vpath %.S $(CONTRIB_SYSDEPS)/$(LIBC_ARCH)
+LIBCSRC_DIR ?= $(PKGDIR)/../uclibc/libc/uclibc
+
+include $(LIBCSRC_DIR)/make_vars.mk
+include $(LIBCSRC_DIR)/sources.mk
 
 INSTALL_TARGET	= $(LD_SCRIPTS) crti.o crtn.o crt1.o crti.s.o crtn.s.o crt1.s.o crt1.p.o
 DEFINES_crt1.s.o = -fPIE -DL_Scrt1
@@ -48,19 +44,26 @@ DEPS += $(foreach file,crti_s.o kip_addr.o, $(call BID_dot_fname,$(file)).cmd)
 
 include $(L4DIR)/mk/lib.mk
 
-$(eval $(call BID_MAKE_RULE_template, crti_s.o, crti.S,AS))
-$(eval $(call BID_MAKE_RULE_template, kip_addr.o, kip_addr.S,AS))
-$(eval $(call BID_MAKE_RULE_template, crt1.p.o, crt1.S,AS))
+LIBC_SYSDEPS    = $(CONTRIB_SYSDEPS)/$(LIBC_ARCH)
+PRIVATE_INCDIR    = $(PKGDIR) $(LIBC_SYSDEPS)
 
-$(eval $(call make_per_obj_vars,crti.s.o,crti.s.o,crti.S))
-$(eval $(call make_per_obj_vars,crti_s.o,crti_s.o,crti.S))
-$(eval $(call make_per_obj_vars,crt1.o,crt1.o,crt1.S))
-$(eval $(call make_per_obj_vars,crt1.p.o,crt1.p.o,crt1.S))
-$(eval $(call make_per_obj_vars,crt1.s.o,crt1.s.o,crt1.S))
-$(eval $(call make_per_obj_vars,crtn.o,crtn.o,crtn.S))
-$(eval $(call make_per_obj_vars,crtn.s.o,crtn.s.o,crtn.S))
+$(eval $(call BID_MAKE_RULE_template, crti_s.o, $(NAME_crti),AS))
+$(eval $(call BID_MAKE_RULE_template, kip_addr.o, kip_addr.S,AS))
+$(eval $(call BID_MAKE_RULE_template, crt1.p.o, $(NAME_crt1),AS))
+
+$(eval $(call make_per_obj_vars,crti.s.o,crti.s.o,$(NAME_crti)))
+$(eval $(call make_per_obj_vars,crti_s.o,crti_s.o,$(NAME_crti)))
+$(eval $(call make_per_obj_vars,crt1.o,crt1.o,$(NAME_crt1)))
+$(eval $(call make_per_obj_vars,crt1.p.o,crt1.p.o,$(NAME_crt1)))
+$(eval $(call make_per_obj_vars,crt1.s.o,crt1.s.o,$(NAME_crt1)))
+$(eval $(call make_per_obj_vars,crtn.o,crtn.o,$(NAME_crtn)))
+$(eval $(call make_per_obj_vars,crtn.s.o,crtn.s.o,$(NAME_crtn)))
 
 $(eval $(call make_per_obj_vars,crti.o,kip_addr.o,kip_addr.S))
+
+vpath $(NAME_crt1) $(LIBC_SYSDEPS)
+vpath $(NAME_crti) $(LIBC_SYSDEPS)
+vpath $(NAME_crtn) $(LIBC_SYSDEPS)
 
 DEFINES_kip_addr.o = -DL4_KIP_ADDR=$(L4_KIP_ADDR)
 
