libc/mk: Separate libc-specific logic from general build system
The individual files compiled into the libc and the flags they
potentially need should go to an isolated file that is then made
specific for the LIBC while generic things stay in the Make.rules.

Change-Id: I5699e7cebe56b590af9be1e99b88ee5d0f8e579a

--- a/ldso/ldso/Makefile
+++ b/ldso/ldso/Makefile
@@ -13,7 +13,7 @@ vpath %.c $(CON_DIR)/ldso
 vpath %.S $(CON_DIR)/ldso/$(LIBC_ARCH)
 vpath aeabi_read_tp-v6p.S     $(LIBCSRC_DIR)/ARCH-arm
 vpath aeabi_read_tp_generic.c $(LIBCSRC_DIR)/ARCH-arm
-vpath ssp-l4.c                $(LIBCSRC_DIR)
+vpath ssp-l4.c                $(LIBCSRC_DIR)/ARCH-all/libc/misc/internals
 
 PRIVATE_INCDIR-x86 := $(CONTRIB_DIR)/libc
 PRIVATE_INCDIR  = $(PRIVATE_INCDIR-$(ARCH)) \
