libc/uclibc-ng/lib*: Set distinct PC_FILENAMES
Up until now libm/ and librt/ both also generated their version of the
libc.pc file, thereby overwriting the libc.pc generated by the libc/
part of the source tree. In order to prevent this we give these
separate libraries their dedicated pc files.

Fixes ticket #CD-1501

Change-Id: I935f4b1101825f5d0fa17e5c72ec6f3c9b0ee385

--- a/libc/uclibc-ng/librt/Makefile
+++ b/libc/uclibc-ng/librt/Makefile
@@ -3,6 +3,8 @@ L4DIR           ?= $(PKGDIR)/../../..
 
 TARGET          := librt.a
 
+PC_FILENAMES     = librt
+
 # librt is empty and just provided for compatibility
 
 include $(L4DIR)/mk/lib.mk
