--- a/libc/uclibc-ng/libm/Makefile
+++ b/libc/uclibc-ng/libm/Makefile
@@ -3,6 +3,8 @@ L4DIR           ?= $(PKGDIR)/../../..
 
 TARGET          := libm.a
 
+PC_FILENAMES     = libm
+
 # libm is empty and just provided for compatibility
 
 include $(L4DIR)/mk/lib.mk
