--- a/l4re_itas/Control
+++ b/l4re_itas/Control
@@ -1,2 +1,2 @@
-requires: libc_minimal libsupc++_minimal libloader libc_minimal_l4re
+requires: libc_minimal libsupc++_minimal libloader libc_minimal_l4re libumalloc
 maintainer: warg@os.inf.tu-dresden.de
