cxx: Greatest common divisor and least common multiple
Change-Id: I0ef1e510e3cdd973871ba3e31dfdb993e61ab123

--- a/cxx/lib/tl/include/Makefile
+++ b/cxx/lib/tl/include/Makefile
@@ -12,6 +12,7 @@ EXTRA_TARGET := \
   list        \
   list_alloc  \
   minmax      \
+  numeric     \
   observer    \
   pair        \
   ref_ptr     \
