l4re_itas: use static heap if configured
If L4Re is configured for a static heap, the ITAS should use it as
well. After all, the space in the binary is already reserved by the
linker script. Additionally, we waste another precious MPU region due
to the dynamically allocated dataspace.

Change-Id: I0beebcc71982b6701ad237a1695d8dc33fcbb458

--- a/l4re_itas/server/src/Makefile
+++ b/l4re_itas/server/src/Makefile
@@ -3,7 +3,8 @@ L4DIR  ?= $(PKGDIR)/../../..
 
 TARGET          = l4re
 SRC_CC         := main.cc globals.cc region.cc loader.cc \
-                  loader_elf.cc mem.cc dispatcher.cc signals.cc remote_access.cc
+                  loader_elf.cc dispatcher.cc signals.cc remote_access.cc
+SRC_CC         += $(if $(CONFIG_BID_STATIC_HEAP),mem_stat.cc,mem_dyn.cc)
 
 SRC_S          := ARCH-$(ARCH)/sig_trampoline.S
 
