ldscripts: Fix broken manual make rule generation for crt1.p.o
The manual make rule generation for crt1.p.o is broken, because it
assumes that $(NAME_crt1_reloc) will always refer to an assembler file.
This assumption holds for uclibc, but breaks for musl, which implements
it in C.

Switch to detecting C files by their .c extension and defaulting to AS
otherwise.

Change-Id: I6efb624ce6b73d1c11fbea6c86b7d344d083ae2d

--- a/ldscripts/Makefile
+++ b/ldscripts/Makefile
@@ -48,9 +48,13 @@ include $(L4DIR)/mk/lib.mk
 LIBC_SYSDEPS    = $(CONTRIB_SYSDEPS)/$(LIBC_ARCH)
 PRIVATE_INCDIR    = $(PKGDIR) $(LIBC_SYSDEPS)
 
-$(eval $(call BID_MAKE_RULE_template, crti_s.o, $(NAME_crti),AS))
-$(eval $(call BID_MAKE_RULE_template, kip_addr.o, kip_addr.S,AS))
-$(eval $(call BID_MAKE_RULE_template, crt1.p.o, $(NAME_crt1_reloc),AS))
+define LDSCRIPT_MAKE_RULE_template
+  $(call BID_MAKE_RULE_template,$1,$2,$(if $(filter %.c,$2),C,AS))
+endef
+
+$(eval $(call LDSCRIPT_MAKE_RULE_template, crti_s.o, $(NAME_crti)))
+$(eval $(call LDSCRIPT_MAKE_RULE_template, kip_addr.o, kip_addr.S))
+$(eval $(call LDSCRIPT_MAKE_RULE_template, crt1.p.o, $(NAME_crt1_reloc)))
 
 $(eval $(call make_per_obj_vars,crti.s.o,crti.s.o,$(NAME_crti)))
 $(eval $(call make_per_obj_vars,crti_s.o,crti_s.o,$(NAME_crti)))
