--- a/l4re/util/include/Makefile
+++ b/l4re/util/include/Makefile
@@ -19,7 +19,7 @@ EXTRA_TARGET +=      \
   object_registry    \
   poll_timeout_kipclock \
   region_mapping     \
-  region_mapping_svr_2 \
+  region_mapping_svr \
   vcon_svr           \
   video/goos_svr     \
   video/goos_fb      \
