libc: Move generic -fPIE flag back to ldscripts
The -fPIE flag is not uclibc-ng specific, but applies to all libcs.

Change-Id: I1f1229f689e95f6eb0912956c7a7ee1945311f69

--- a/ldscripts/Makefile
+++ b/ldscripts/Makefile
@@ -38,6 +38,8 @@ include $(LIBCSRC_DIR)/make_vars.mk
 include $(LIBCSRC_DIR)/sources.mk
 
 INSTALL_TARGET	= $(LD_SCRIPTS) crti.o crtn.o crt1.o crti.s.o crtn.s.o crt1.s.o crt1.p.o
+DEFINES_crt1.s.o += -fPIE
+DEFINES_crt1.p.o += -fPIE
 
 REQUIRES_LIBS_all_lib :=
 
