ldscripts: Depend on libc-headers
On musl the crt code needs includes from libc-headers, so they have to
be generated before ldscripts gets built.

Change-Id: I9affb1503eeba85f958583055412d1bd816fe758

--- a/ldscripts/Control
+++ b/ldscripts/Control
@@ -1,4 +1,4 @@
 provides: ldscripts
-requires: compiler-rt-crt
+requires: compiler-rt-crt libc-headers
 source-pkg: libc
 maintainer: warg@os.inf.tu-dresden.de
