libc-headers: Regenerate headers if input changes
Previously a change to e.g. alltypes.h.in did not trigger a regeneration
of the corresponding alltypes.h header.

Change-Id: I05576ea1927a0b3b208f83264527bca2c41358d7
Signed-off-by: Marcus Haehnel <marcus.haehnel@kernkonzept.com>

--- a/libc-headers/Makefile
+++ b/libc-headers/Makefile
@@ -29,7 +29,8 @@ $(DST_HEADERS): $(HEADER_DIR)/%: % FORCE $(LIBCSRC_DIR)/target_headers.mk \
 	$(VERBOSE)[[ $< -ef $@ ]] || $(LN) -sf $(abspath $<) $@
 
 $(HEADER_DIR): $(GENERAL_D_LOC) $(SRC_DIR)/Makefile $(LIBCSRC_DIR)/make_vars.mk \
-               $(LIBCSRC_DIR)/target_headers.mk $(HEADER_DIR).include_tracker
+               $(LIBCSRC_DIR)/target_headers.mk $(HEADER_DIR).include_tracker \
+               $(foreach g,$(GEN_common) $(GEN_$(BUILD_ARCH)),$(GEN_DEPS_$g))
 	$(VERBOSE)$(RM) -r $@
 	$(VERBOSE)install -d $@
 	@$(INSTALL_LINK_MESSAGE)
