--- a/libstdc++-v3/contrib/libstdc++-v3-16/src/c++26/Makefile.am
+++ b/libstdc++-v3/contrib/libstdc++-v3-16/src/c++26/Makefile.am
@@ -35,7 +35,9 @@ else
 inst_sources =
 endif
 
-sources = text_encoding.cc
+sources = \
+	  debugging.cc \
+	  text_encoding.cc
 
 vpath % $(top_srcdir)/src/c++26
 
