--- a/libstdc++-v3/contrib/libstdc++-v3-16/src/c++26/Makefile.in
+++ b/libstdc++-v3/contrib/libstdc++-v3-16/src/c++26/Makefile.in
@@ -121,7 +121,7 @@ CONFIG_CLEAN_FILES =
 CONFIG_CLEAN_VPATH_FILES =
 LTLIBRARIES = $(noinst_LTLIBRARIES)
 libc__26convenience_la_LIBADD =
-am__objects_1 = text_encoding.lo
+am__objects_1 = debugging.lo text_encoding.lo
 am__objects_2 =
 @GLIBCXX_HOSTED_TRUE@am_libc__26convenience_la_OBJECTS =  \
 @GLIBCXX_HOSTED_TRUE@	$(am__objects_1) $(am__objects_2)
@@ -430,7 +430,10 @@ headers =
 
 # XTEMPLATE_FLAGS = -fno-implicit-templates
 @ENABLE_EXTERN_TEMPLATE_TRUE@inst_sources = 
-sources = text_encoding.cc
+sources = \
+	  debugging.cc \
+	  text_encoding.cc
+
 @GLIBCXX_HOSTED_FALSE@libc__26convenience_la_SOURCES = 
 @GLIBCXX_HOSTED_TRUE@libc__26convenience_la_SOURCES = $(sources)  $(inst_sources)
 
