libpthread: Port to musl
Change-Id: I95a0dee6a3f4cef386d2e6d3f55baf44759510dd
Signed-off-by: Marcus Haehnel <marcus.haehnel@kernkonzept.com>

--- a/libc/musl/contrib/musl/include/alltypes.h.in
+++ b/libc/musl/contrib/musl/include/alltypes.h.in
@@ -50,6 +50,7 @@ TYPEDEF unsigned gid_t;
 TYPEDEF int key_t;
 TYPEDEF unsigned useconds_t;
 
+/*
 #ifdef __cplusplus
 TYPEDEF unsigned long pthread_t;
 #else
@@ -62,6 +63,11 @@ TYPEDEF struct { unsigned __attr; } pthread_mutexattr_t;
 TYPEDEF struct { unsigned __attr; } pthread_condattr_t;
 TYPEDEF struct { unsigned __attr; } pthread_barrierattr_t;
 TYPEDEF struct { unsigned __attr[2]; } pthread_rwlockattr_t;
+*/
+// Also typedefd in pthreadtypes.h, but we probably don't want to include that here.
+TYPEDEF unsigned long pthread_t;
+// required by signal.h
+TYPEDEF struct __pthread_attr_s pthread_attr_t;
 
 STRUCT _IO_FILE { char __x; };
 TYPEDEF struct _IO_FILE FILE;
@@ -82,13 +88,20 @@ STRUCT winsize { unsigned short ws_row, ws_col, ws_xpixel, ws_ypixel; };
 TYPEDEF unsigned socklen_t;
 TYPEDEF unsigned short sa_family_t;
 
+// TODO: This might be out of sync with the structs provided by our LinxuThreads libpthread.
+/*
 TYPEDEF struct { union { int __i[sizeof(long)==8?14:9]; volatile int __vi[sizeof(long)==8?14:9]; unsigned long __s[sizeof(long)==8?7:9]; } __u; } pthread_attr_t;
 TYPEDEF struct { union { int __i[sizeof(long)==8?10:6]; volatile int __vi[sizeof(long)==8?10:6]; volatile void *volatile __p[sizeof(long)==8?5:6]; } __u; } pthread_mutex_t;
+*/
 TYPEDEF struct { union { int __i[sizeof(long)==8?10:6]; volatile int __vi[sizeof(long)==8?10:6]; volatile void *volatile __p[sizeof(long)==8?5:6]; } __u; } mtx_t;
+/*
 TYPEDEF struct { union { int __i[12]; volatile int __vi[12]; void *__p[12*sizeof(int)/sizeof(void*)]; } __u; } pthread_cond_t;
+*/
 TYPEDEF struct { union { int __i[12]; volatile int __vi[12]; void *__p[12*sizeof(int)/sizeof(void*)]; } __u; } cnd_t;
+/*
 TYPEDEF struct { union { int __i[sizeof(long)==8?14:8]; volatile int __vi[sizeof(long)==8?14:8]; void *__p[sizeof(long)==8?7:8]; } __u; } pthread_rwlock_t;
 TYPEDEF struct { union { int __i[sizeof(long)==8?8:5]; volatile int __vi[sizeof(long)==8?8:5]; void *__p[sizeof(long)==8?4:5]; } __u; } pthread_barrier_t;
+*/
 
 #undef _Addr
 #undef _Int64
