libc_be/sig: Move _GNU_SOURCE define to Makefile
In case the compiler already sets it and to avoid the resulting warning,
put it on the command line instead of the in the file.

Signed-off-by: Adam Lackorzynski <adam@l4re.org>

Change-Id: I338d9f92e4951dd5044cf308c7c50c21b4be52b3

--- a/libc_backends/lib/sig/Makefile
+++ b/libc_backends/lib/sig/Makefile
@@ -8,5 +8,6 @@ PC_LIBS_PIC =
 SRC_CC      = sig.cc
 CXXFLAGS    = -fno-rtti -fno-exceptions
 DEFINES     = -DL4_NO_RTTI
+DEFINES_sig.cc += -D_GNU_SOURCE
 
 include $(L4DIR)/mk/lib.mk
