l4re_itas: don't define _GNU_SOURCE in C++ sources but use Makefile
The g++ compiler usually passes -D_GNU_SOURCE by default and doing this
in the C++ module makes the compiler warn about re-defining _GNU_SOURCE.

Add a command line parameter instead to prevent the warning.

Change-Id: Ia9d62a9c2cb0f691c7030f93823816d6d374fbdc

--- a/l4re_itas/server/src/Makefile
+++ b/l4re_itas/server/src/Makefile
@@ -14,6 +14,9 @@ CXXFLAGS_mips  += -mplt -mno-shared -DL4_LOADER_USE_ASM_STUB=1
 CXXFLAGS_riscv += -DL4_LOADER_USE_ASM_STUB=1
 #CXXFLAGS_arm64 += -mcmodel=large
 
+DEFINES_signals.cc += -D_GNU_SOURCE
+DEFINES_loader.cc  += -D_GNU_SOURCE
+
 DEFAULT_RELOC_x86   := 0xb0000000
 DEFAULT_RELOC_arm   := 0xb0000000
 DEFAULT_RELOC_arm64 := 0xc0000000
