don't rely on _GNU_SOURCE but define _ISOC11_SOURCE
_ISOC11_SOURCE required for aligned_alloc() prototype.

Change-Id: I58d73ac6d959c1653b1e5588d08c8d50c690996d

--- a/libumalloc/lib/src/Makefile
+++ b/libumalloc/lib/src/Makefile
@@ -7,5 +7,6 @@ TARGET		= libumalloc.a
 PC_EXTRA	= Link_Libs= %{static|static-pie:-lumalloc}
 
 SRC_CC		= malloc.cc
+DEFINES         = -D_ISOC11_SOURCE
 
 include $(L4DIR)/mk/lib.mk
