libstdc++-v3: Update gcc-16 variant
Taken from 428c736e63bb941d2a739237b2e36f0d3d72dd1b

Change-Id: If62581b7e7e99c4efc81d05406a4ec7f559ba55a
Signed-off-by: Adam Lackorzynski <adam@l4re.org>

--- a/libstdc++-v3/contrib/libstdc++-v3-16/config.h.in
+++ b/libstdc++-v3/contrib/libstdc++-v3-16/config.h.in
@@ -152,6 +152,9 @@
 /* Define to 1 if you have the `frexpl' function. */
 #undef HAVE_FREXPL
 
+/* Define if fwrite_unlocked can be used for std::print. */
+#undef HAVE_FWRITE_UNLOCKED
+
 /* Define if getentropy is available in <unistd.h>. */
 #undef HAVE_GETENTROPY
 
@@ -828,6 +831,9 @@
 /* Define if get_nprocs is available in <sys/sysinfo.h>. */
 #undef _GLIBCXX_USE_GET_NPROCS
 
+/* Define if Glibc FILE internals should be used for std::print. */
+#undef _GLIBCXX_USE_GLIBC_STDIO_EXT
+
 /* Define if init_priority should be used for iostream initialization. */
 #undef _GLIBCXX_USE_INIT_PRIORITY_ATTRIBUTE
 
@@ -892,6 +898,9 @@
 
 /* Define if sendfile is available in <sys/sendfile.h>. */
 #undef _GLIBCXX_USE_SENDFILE
+
+/* Define if flockfile and putc_unlocked should be used for std::print. */
+#undef _GLIBCXX_USE_STDIO_LOCKING
 
 /* Define to restrict std::__basic_file<> to stdio APIs. */
 #undef _GLIBCXX_USE_STDIO_PURE
