l4re-itas/ned: allow to compile as PIE on arm/arm64 and x86-64
Change-Id: I3a253070685199fbc5848bf3a569452cd9755c6e

--- a/l4re_itas/server/src/Makefile
+++ b/l4re_itas/server/src/Makefile
@@ -25,7 +25,9 @@ DEFAULT_RELOC_amd64 := 0x70000000
 DEFAULT_RELOC_mips  := 0x70000000
 DEFAULT_RELOC_riscv := 0x70000000
 
-MODE = sigma0
+MODE                = sigma0
+
+BID_CAN_PIE         = y
 
 PRIVATE_INCDIR      += $(SRC_DIR)/ARCH-$(ARCH)
 
